[package]
name = "github-youtrack"
version = "0.1.0"
edition = "2024"

[workspace]
items = [
  "youtrack_api"
]

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
http = "1.3.1"
octocrab = "0.47.0"
rpassword = "7.4.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
youtrack_api = { path = "youtrack_api" }
reqwest = { version = "0.12.24", features = ["json"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
